--- a/appjedrez/package.json
+++ b/appjedrez/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@schematics/angular": "^15.2.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
