--- a/appjedrez/package.json
+++ b/appjedrez/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@mercadopago/sdk-js": "^0.0.2",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^3.6.0",
-    "chess.js": "^1.0.0-beta.3",
+    "chess.js": "^1.0.0-beta.6",
     "ng2-charts": "^4.1.1",
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
